--- a/picture-format-changer.ipynb
+++ b/picture-format-changer.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "60703ec2-e171-43aa-bd0a-bf732ff4c760",
    "metadata": {
     "scrolled": true
@@ -90,12 +90,13 @@
     "def convert_data_to_png(data_folder:str, output_folder:str, use_thread=False):\n",
     "    file_list = os.listdir(input_folder)\n",
     "    length = len(file_list)\n",
+    "    total_thread = 10\n",
     "    \n",
     "    if use_thread:\n",
     "        threads = []\n",
-    "        divider = length//10\n",
+    "        divider = length//total_thread\n",
     "\n",
-    "        total = 10\n",
+    "        total = total_thread\n",
     "        if length%divider != 0:\n",
     "            total += 1\n",
     "        for n in range(11):\n",
