add format args to converter

--- a/picture-format-changer.ipynb
+++ b/picture-format-changer.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "id": "033cf49f-9a21-4a73-bd6b-fa8266a677a3",
    "metadata": {},
    "outputs": [],
@@ -30,11 +30,11 @@
     "from PIL import Image\n",
     "\n",
     "# functin to convert webp to png/gif\n",
-    "def convert_webp_to_png(data_path:str, output_path:str):\n",
+    "def convert_webp_to_png(data_path:str, output_path:str, format='png'):\n",
     "    try:\n",
     "        webp_image = Image.open(data_path)\n",
     "        png_image = webp_image.convert(\"RGBA\")\n",
-    "        png_image.save(output_path, lossless=True, quality=100, method=6)\n",
+    "        png_image.save(output_path, format=format,lossless=True, quality=100, method=6)\n",
     "\n",
     "        print(f\"{data_path} convert to {output_path}\")\n",
     "    except Exception as e:\n",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "e455473d-b343-47f4-abe1-4e06defe5aac",
    "metadata": {},
    "outputs": [
@@ -138,247 +138,10 @@
       "207 230\n",
       "230 231\n",
       "data\\139.webp convert to output\\139.png\n",
-      "data\\208.webp convert to output\\208.png\n",
       "data\\116.webp convert to output\\116.png\n",
       "data\\162.webp convert to output\\162.png\n",
-      "data\\093.webp convert to output\\093.png\n",
-      "data\\047.webp convert to output\\047.png\n",
-      "data\\024.webp convert to output\\024.png\n",
-      "data\\070.webp convert to output\\070.png\n",
-      "data\\185.webp convert to output\\185.png\n",
-      "data\\001.webp convert to output\\001.png\n",
-      "data\\231.webp convert to output\\231.png\n",
-      "total image processed = 1\n",
-      "data\\002.webp convert to output\\002.png\n",
-      "data\\140.webp convert to output\\140.png\n",
-      "data\\117.webp convert to output\\117.png\n",
-      "data\\209.webp convert to output\\209.png\n",
-      "data\\003.webp convert to output\\003.png\n",
-      "data\\163.webp convert to output\\163.png\n",
-      "data\\071.webp convert to output\\071.png\n",
-      "data\\094.webp convert to output\\094.png\n",
-      "data\\186.webp convert to output\\186.png\n",
-      "data\\025.webp convert to output\\025.png\n",
-      "data\\048.webp convert to output\\048.png\n",
-      "data\\141.webp convert to output\\141.png\n",
-      "data\\118.webp convert to output\\118.png\n",
-      "data\\164.webp convert to output\\164.png\n",
-      "data\\072.webp convert to output\\072.png\n",
-      "data\\210.webp convert to output\\210.png\n",
-      "data\\004.webp convert to output\\004.png\n",
-      "data\\095.webp convert to output\\095.png\n",
-      "data\\187.webp convert to output\\187.png\n",
-      "data\\026.webp convert to output\\026.png\n",
-      "data\\049.webp convert to output\\049.png\n",
-      "data\\142.webp convert to output\\142.png\n",
-      "data\\073.webp convert to output\\073.png\n",
-      "data\\119.webp convert to output\\119.png\n",
-      "data\\165.webp convert to output\\165.png\n",
-      "data\\211.webp convert to output\\211.png\n",
-      "data\\096.webp convert to output\\096.png\n",
-      "data\\050.webp convert to output\\050.png\n",
-      "data\\188.webp convert to output\\188.png\n",
-      "data\\005.webp convert to output\\005.png\n",
-      "data\\027.webp convert to output\\027.png\n",
-      "data\\143.webp convert to output\\143.png\n",
-      "data\\074.webp convert to output\\074.png\n",
-      "data\\212.webp convert to output\\212.png\n",
-      "data\\120.webp convert to output\\120.png\n",
-      "data\\166.webp convert to output\\166.png\n",
-      "data\\097.webp convert to output\\097.png\n",
-      "data\\051.webp convert to output\\051.png\n",
-      "data\\189.webp convert to output\\189.png\n",
-      "data\\075.webp convert to output\\075.png\n",
-      "data\\144.webp convert to output\\144.png\n",
-      "data\\028.webp convert to output\\028.png\n",
-      "data\\006.webp convert to output\\006.png\n",
-      "data\\213.webp convert to output\\213.png\n",
-      "data\\121.webp convert to output\\121.png\n",
-      "data\\167.webp convert to output\\167.png\n",
-      "data\\052.webp convert to output\\052.png\n",
-      "data\\098.webp convert to output\\098.png\n",
-      "data\\076.webp convert to output\\076.png\n",
-      "data\\145.webp convert to output\\145.png\n",
-      "data\\190.webp convert to output\\190.png\n",
-      "data\\029.webp convert to output\\029.png\n",
-      "data\\214.webp convert to output\\214.png\n",
-      "data\\007.webp convert to output\\007.png\n",
-      "data\\168.webp convert to output\\168.png\n",
-      "data\\053.webp convert to output\\053.png\n",
-      "data\\122.webp convert to output\\122.png\n",
-      "data\\099.webp convert to output\\099.png\n",
-      "data\\077.webp convert to output\\077.png\n",
-      "data\\146.webp convert to output\\146.png\n",
-      "data\\191.webp convert to output\\191.png\n",
-      "data\\054.webp convert to output\\054.png\n",
-      "data\\030.webp convert to output\\030.png\n",
-      "data\\169.webp convert to output\\169.png\n",
-      "data\\215.webp convert to output\\215.png\n",
-      "data\\078.webp convert to output\\078.png\n",
-      "data\\008.webp convert to output\\008.png\n",
-      "data\\123.webp convert to output\\123.png\n",
-      "data\\100.webp convert to output\\100.png\n",
-      "data\\147.webp convert to output\\147.png\n",
-      "data\\055.webp convert to output\\055.png\n",
-      "data\\170.webp convert to output\\170.png\n",
-      "data\\192.webp convert to output\\192.png\n",
-      "data\\031.webp convert to output\\031.png\n",
-      "data\\079.webp convert to output\\079.png\n",
-      "data\\216.webp convert to output\\216.png\n",
-      "data\\124.webp convert to output\\124.png\n",
-      "data\\148.webp convert to output\\148.png\n",
-      "data\\101.webp convert to output\\101.png\n",
-      "data\\009.webp convert to output\\009.png\n",
-      "data\\056.webp convert to output\\056.png\n",
-      "data\\171.webp convert to output\\171.png\n",
-      "data\\080.webp convert to output\\080.png\n",
-      "data\\193.webp convert to output\\193.png\n",
-      "data\\032.webp convert to output\\032.png\n",
-      "data\\125.webp convert to output\\125.png\n",
-      "data\\149.webp convert to output\\149.png\n",
-      "data\\217.webp convert to output\\217.png\n",
-      "data\\102.webp convert to output\\102.png\n",
-      "data\\010.webp convert to output\\010.png\n",
-      "data\\057.webp convert to output\\057.png\n",
-      "data\\081.webp convert to output\\081.png\n",
-      "data\\033.webp convert to output\\033.png\n",
-      "data\\172.webp convert to output\\172.png\n",
-      "data\\194.webp convert to output\\194.png\n",
-      "data\\150.webp convert to output\\150.png\n",
-      "data\\218.webp convert to output\\218.png\n",
-      "data\\126.webp convert to output\\126.png\n",
-      "data\\103.webp convert to output\\103.png\n",
-      "data\\082.webp convert to output\\082.png\n",
-      "data\\058.webp convert to output\\058.png\n",
-      "data\\034.webp convert to output\\034.png\n",
-      "data\\011.webp convert to output\\011.png\n",
-      "data\\195.webp convert to output\\195.png\n",
-      "data\\173.webp convert to output\\173.png\n",
-      "data\\151.webp convert to output\\151.png\n",
-      "data\\127.webp convert to output\\127.png\n",
-      "data\\104.webp convert to output\\104.png\n",
-      "data\\219.webp convert to output\\219.png\n",
-      "data\\083.webp convert to output\\083.png\n",
-      "data\\059.webp convert to output\\059.png\n",
-      "data\\035.webp convert to output\\035.png\n",
-      "data\\196.webp convert to output\\196.png\n",
-      "data\\174.webp convert to output\\174.png\n",
-      "data\\012.webp convert to output\\012.png\n",
-      "data\\152.webp convert to output\\152.png\n",
-      "data\\128.webp convert to output\\128.png\n",
-      "data\\084.webp convert to output\\084.png\n",
-      "data\\060.webp convert to output\\060.png\n",
-      "data\\220.webp convert to output\\220.png\n",
-      "data\\105.webp convert to output\\105.png\n",
-      "data\\197.webp convert to output\\197.png\n",
-      "data\\036.webp convert to output\\036.png\n",
-      "data\\175.webp convert to output\\175.png\n",
-      "data\\013.webp convert to output\\013.png\n",
-      "data\\153.webp convert to output\\153.png\n",
-      "data\\061.webp convert to output\\061.png\n",
-      "data\\085.webp convert to output\\085.png\n",
-      "data\\221.webp convert to output\\221.png\n",
-      "data\\129.webp convert to output\\129.png\n",
-      "data\\037.webp convert to output\\037.png\n",
-      "data\\106.webp convert to output\\106.png\n",
-      "data\\198.webp convert to output\\198.png\n",
-      "data\\176.webp convert to output\\176.png\n",
-      "data\\014.webp convert to output\\014.png\n",
-      "data\\154.webp convert to output\\154.png\n",
-      "data\\062.webp convert to output\\062.png\n",
-      "data\\222.webp convert to output\\222.png\n",
-      "data\\086.webp convert to output\\086.png\n",
-      "data\\038.webp convert to output\\038.png\n",
-      "data\\177.webp convert to output\\177.png\n",
-      "data\\130.webp convert to output\\130.png\n",
-      "data\\199.webp convert to output\\199.png\n",
-      "data\\107.webp convert to output\\107.png\n",
-      "data\\015.webp convert to output\\015.png\n",
-      "data\\155.webp convert to output\\155.png\n",
-      "data\\063.webp convert to output\\063.png\n",
-      "data\\178.webp convert to output\\178.png\n",
-      "data\\039.webp convert to output\\039.png\n",
-      "data\\087.webp convert to output\\087.png\n",
-      "data\\131.webp convert to output\\131.png\n",
-      "data\\223.webp convert to output\\223.png\n",
-      "data\\200.webp convert to output\\200.png\n",
-      "data\\108.webp convert to output\\108.png\n",
-      "data\\156.webp convert to output\\156.png\n",
-      "data\\016.webp convert to output\\016.png\n",
-      "data\\064.webp convert to output\\064.png\n",
-      "data\\132.webp convert to output\\132.png\n",
-      "data\\201.webp convert to output\\201.png\n",
-      "data\\088.webp convert to output\\088.png\n",
-      "data\\179.webp convert to output\\179.png\n",
-      "data\\224.webp convert to output\\224.png\n",
-      "data\\040.webp convert to output\\040.png\n",
-      "data\\157.webp convert to output\\157.png\n",
-      "data\\109.webp convert to output\\109.png\n",
-      "data\\065.webp convert to output\\065.png\n",
-      "data\\017.webp convert to output\\017.png\n",
-      "data\\133.webp convert to output\\133.png\n",
-      "data\\089.webp convert to output\\089.png\n",
-      "data\\180.webp convert to output\\180.png\n",
-      "data\\225.webp convert to output\\225.png\n",
-      "data\\202.webp convert to output\\202.png\n",
-      "data\\158.webp convert to output\\158.png\n",
-      "data\\041.webp convert to output\\041.png\n",
-      "data\\203.webp convert to output\\203.png\n",
-      "data\\066.webp convert to output\\066.png\n",
-      "data\\110.webp convert to output\\110.png\n",
-      "data\\134.webp convert to output\\134.png\n",
-      "data\\018.webp convert to output\\018.png\n",
-      "data\\159.webp convert to output\\159.png\n",
-      "data\\181.webp convert to output\\181.png\n",
-      "data\\090.webp convert to output\\090.png\n",
-      "data\\226.webp convert to output\\226.png\n",
-      "data\\042.webp convert to output\\042.png\n",
-      "data\\067.webp convert to output\\067.png\n",
-      "data\\204.webp convert to output\\204.png\n",
-      "data\\111.webp convert to output\\111.png\n",
-      "data\\135.webp convert to output\\135.png\n",
-      "data\\091.webp convert to output\\091.png\n",
-      "data\\160.webp convert to output\\160.png\n",
-      "data\\019.webp convert to output\\019.png\n",
-      "data\\182.webp convert to output\\182.png\n",
-      "data\\043.webp convert to output\\043.png\n",
-      "data\\205.webp convert to output\\205.png\n",
-      "data\\227.webp convert to output\\227.png\n",
-      "data\\068.webp convert to output\\068.png\n",
-      "data\\112.webp convert to output\\112.png\n",
-      "data\\136.webp convert to output\\136.png\n",
-      "data\\161.webp convert to output\\161.png\n",
-      "total image processed = 23\n",
-      "data\\092.webp convert to output\\092.png\n",
-      "total image processed = 23\n",
-      "data\\183.webp convert to output\\183.png\n",
-      "data\\020.webp convert to output\\020.png\n",
-      "data\\228.webp convert to output\\228.png\n",
-      "data\\206.webp convert to output\\206.png\n",
-      "data\\044.webp convert to output\\044.png\n",
-      "data\\069.webp convert to output\\069.png\n",
-      "total image processed = 23\n",
-      "data\\137.webp convert to output\\137.png\n",
-      "data\\113.webp convert to output\\113.png\n",
-      "data\\184.webp convert to output\\184.png\n",
-      "total image processed = 23\n",
-      "data\\207.webp convert to output\\207.png\n",
-      "total image processed = 23\n",
-      "data\\021.webp convert to output\\021.png\n",
-      "data\\045.webp convert to output\\045.png\n",
-      "data\\138.webp convert to output\\138.png\n",
-      "total image processed = 23\n",
-      "data\\229.webp convert to output\\229.png\n",
-      "data\\114.webp convert to output\\114.png\n",
-      "data\\046.webp convert to output\\046.png\n",
-      "total image processed = 23\n",
-      "data\\022.webp convert to output\\022.png\n",
-      "data\\115.webp convert to output\\115.png\n",
-      "total image processed = 23\n",
-      "data\\230.webp convert to output\\230.png\n",
-      "total image processed = 23\n",
-      "data\\023.webp convert to output\\023.png\n",
-      "total image processed = 23\n"
+      "data\\208.webp convert to output\\208.png\n",
+      "data\\024.webp convert to output\\024.png\n"
      ]
     }
    ],
