--- a/picture-format-changer.ipynb
+++ b/picture-format-changer.ipynb
@@ -101,21 +101,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 89,
    "id": "60703ec2-e171-43aa-bd0a-bf732ff4c760",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (974389961.py, line 19)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[86], line 19\u001b[1;36m\u001b[0m\n\u001b[1;33m    total = total_threadif length%divider != 0:\u001b[0m\n\u001b[1;37m                           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import threading\n",
@@ -127,6 +118,10 @@
     "    start_time = time.time()\n",
     "    file_list = os.listdir(input_folder)\n",
     "    length = len(file_list)\n",
+    "    if length == 0:\n",
+    "        print(\"There is no data to convert\")\n",
+    "        return\n",
+    "    \n",
     "    total_thread = 10\n",
     "    \n",
     "    if use_thread:\n",
@@ -162,10 +157,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "id": "e455473d-b343-47f4-abe1-4e06defe5aac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There is no data to convert\n"
+     ]
+    }
+   ],
    "source": [
     "convert_data_to_png(input_folder, output_folder, use_thread=True)"
    ]
