--- a/picture-format-changer.ipynb
+++ b/picture-format-changer.ipynb
@@ -72,7 +72,7 @@
    "outputs": [],
    "source": [
     "def get_path_by_name(data_folder:str, output_folder:str, file_name:str):\n",
-    "    image_name = file_name.replace('.webp', '')\n",
+    "    image_name, ext = = os.path.splitext(file_name)\n",
     "    data_path = f\"{data_folder}\\\\{file_name}\"\n",
     "    output_path = f\"{output_folder}\\\\{image_name}.png\"\n",
     "    is_gif = IsGif(data_path)\n",
