Add ignore aspect ratio option

--- a/Image Resize.ipynb
+++ b/Image Resize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "20ae5e5c-7b64-451d-a3ec-957d1378e1a3",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "11f62379-daea-44b4-9325-7a29a55c1aaa",
    "metadata": {},
    "outputs": [],
@@ -30,27 +30,30 @@
     "import os, sys\n",
     "from PIL import Image\n",
     "\n",
-    "def resize_image_by_path(width:int, height:int, path:str):\n",
+    "def resize_image_by_path(width:int, height:int, path:str, keep_aspect:bool):\n",
     "    size = width, height\n",
     "    input_path = os.path.join(input_folder, path)\n",
     "    output_path = os.path.join(output_folder, path)\n",
     "    \n",
     "    with Image.open(input_path) as im:\n",
-    "        im.thumbnail(size)\n",
+    "        if keep_aspect:\n",
+    "            im.thumbnail(size)\n",
+    "        else:\n",
+    "            im = im.resize(size);\n",
     "        im.save(output_path, \"PNG\")\n",
     "    print(\"Done\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "8be4156b-c853-4fdc-a304-8a6a36f5d8bc",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
-    "def resize_image_all(width:int, height:int):\n",
+    "def resize_image_all(width:int, height:int, keep_aspect:bool = True):\n",
     "    file_list = os.listdir(input_folder)\n",
     "    length = len(file_list)\n",
     "    if length == 0:\n",
@@ -58,12 +61,12 @@
     "        return\n",
     "\n",
     "    for path in file_list:\n",
-    "        resize_image_by_path(width, height, path)"
+    "        resize_image_by_path(width, height, path, keep_aspect)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "3963af8f-caa6-4133-bd34-af19ddb2cea1",
    "metadata": {},
    "outputs": [
@@ -76,7 +79,7 @@
     }
    ],
    "source": [
-    "resize_image_all(128, 128)"
+    "resize_image_all(256, 256, False)"
    ]
   }
  ],
@@ -96,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
