Add combine picture ipyndb

--- a/Combine Picture.ipynb
+++ b/Combine Picture.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "0eb61f8e-6855-4fa2-87fe-5d6c7ecc9ad9",
+   "execution_count": 1,
+   "id": "5305ac1a-13e5-422f-afbb-329e736abc9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,8 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "828076c5-4249-413e-855a-f900735b81cd",
+   "execution_count": null,
+   "id": "2317d98b-55bb-4c1e-83d7-a7dea0163c1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "033cf49f-9a21-4a73-bd6b-fa8266a677a3",
+   "execution_count": null,
+   "id": "6d6b7213-fb35-4aef-85b8-bb77911ac2b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,8 +66,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "43a2e02b-2b30-433e-baf5-088ad8966e6a",
+   "execution_count": null,
+   "id": "59429be2-2952-4ef5-8904-1eec6a77cfc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,8 +83,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "f9bc3803-881a-4e1f-a3c8-870e17a6ccea",
+   "execution_count": null,
+   "id": "5954996f-3e99-4a06-a0d3-af7258590391",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,11 +101,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "60703ec2-e171-43aa-bd0a-bf732ff4c760",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 53,
+   "id": "2f13136a-3335-4e76-8755-b9ec2c26ec8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from PIL import Image\n",
+    "\n",
+    "def get_all_image(data_folder:str):\n",
+    "    file_list = os.listdir(data_folder)\n",
+    "\n",
+    "    image_list = []\n",
+    "    for n in file_list:\n",
+    "        image_name, ext = os.path.splitext(n)\n",
+    "        image = Image.open(os.path.join(data_folder, n))\n",
+    "\n",
+    "        if \"png\" in ext:\n",
+    "            image.load()\n",
+    "\n",
+    "            background = Image.new(\"RGB\", image.size, (255, 255, 255))\n",
+    "            background.paste(image, mask=image.split()[3])\n",
+    "            \n",
+    "        image_list.append(image)\n",
+    "    return image_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "81af95f9-a863-4846-be55-baa245f00468",
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -114,40 +140,20 @@
     "import math\n",
     "import time\n",
     "\n",
-    "def convert_data_to_png(data_folder:str, output_folder:str, use_thread=False):\n",
+    "def combine_picture(data_folder:str, output_folder:str, target:str):\n",
+    "    # Start time\n",
     "    start_time = time.time()\n",
-    "    file_list = os.listdir(input_folder)\n",
-    "    length = len(file_list)\n",
-    "    if length == 0:\n",
-    "        print(\"There is no data to convert\")\n",
+    "    \n",
+    "    image_list = get_all_image(data_folder)\n",
+    "    final_path = os.path.join(output_folder, f\"combined.{target}\")\n",
+    "    if len(image_list) == 0:\n",
     "        return\n",
-    "    \n",
-    "    total_thread = 10\n",
-    "    \n",
-    "    if use_thread:\n",
-    "        threads = []\n",
-    "        if total_thread > length:\n",
-    "            total_thread = length\n",
-    "        divider = length//total_thread\n",
-    "\n",
-    "        total = total_thread\n",
-    "        if length%divider != 0:\n",
-    "            total += 1\n",
-    "        for n in range(total):\n",
-    "            start_index = n*divider\n",
-    "            if start_index > length:\n",
-    "                continue\n",
-    "            end_index = min((n+1)*divider, length)\n",
-    "            args = data_folder, output_folder, start_index, end_index, file_list\n",
-    "            thread = threading.Thread(target=convert_data_by_part, args=args, daemon=True)\n",
-    "            threads.append(thread)\n",
-    "            thread.start()\n",
-    "\n",
-    "        for thread in threads:\n",
-    "            thread.join()\n",
+    "    if len(image_list) > 1:\n",
+    "        image_list[0].save(final_path, target.upper(), resolution=100.0, save_all=True, append_images=image_list[1:])\n",
     "    else:\n",
-    "        convert_data_by_part(data_folder, output_folder, 0, length, file_list)\n",
-    "\n",
+    "        image_list[0].save(final_path, target.upper(), resolution=100.0)\n",
+    "    \n",
+    "    # Calculate time\n",
     "    elapsed_time = int(time.time() - start_time)\n",
     "    hour = elapsed_time//3600\n",
     "    minute = (elapsed_time - hour*3600)//60\n",
@@ -157,23 +163,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "e455473d-b343-47f4-abe1-4e06defe5aac",
+   "execution_count": 55,
+   "id": "b880f070-e5d0-4319-9ab2-112069950e00",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 1\n",
-      "data\\ying0yi-1819583208520142896-1.jpg convert to output\\ying0yi-1819583208520142896-1.png\n",
-      "total image processed = 1\n",
+      "[<PIL.PngImagePlugin.PngImageFile image mode=RGBA size=256x256 at 0x23C1E1B1790>]\n",
       "time elapsed: 00:00:00\n"
      ]
     }
    ],
    "source": [
-    "convert_data_to_png(input_folder, output_folder, use_thread=True)"
+    "combine_picture(input_folder, output_folder, \"PDF\")"
    ]
   }
  ],
